# insight-mcp

./: .env.example  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  deploy_azure.md
scripts/: demo_mcp_connector.py  ingest.py  seed_urls_wavestone.txt
src/insight_mcp/: __init__.py  bootstrap.py  corpus.py  http_auth.py  ingest.py  logging_conf.py  metrics.py  rate_limit.py  sample_corpus.py  search.py  server.py  settings.py
tests/: conftest.py  test_fetcher.py  test_http_auth.py  test_ingest.py  test_ops.py  test_search.py  test_smoke.py  test_tools.py
