[project]
name = "insight-mcp"
version = "0.1.0"
description = "Self-contained MCP server exposing hybrid document search as tools for AI agents"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Sam Pondevie" }]
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.27",
    "pydantic-settings>=2.4",
    "prometheus-client>=0.20",
    "rank-bm25>=0.2",
    "trafilatura>=2.1,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[project.urls]
Repository = "https://github.com/Airohh/insight-mcp"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/insight_mcp"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
